# python_tmr

./: .gitignore  .pre-commit-config.yaml  README.md  _quarto.yml  index.qmd  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post_create.sh
.github/workflows/: publish.yml
notebooks/: 0a_intro.ipynb  0b_python1.ipynb  0c_python2.ipynb
slides/: 0a.qmd  0b.qmd  0c.qmd  _style.css
