[project]
name = "course-ptmr"
version = "0.1.0"
description = "Python Tools for Management Research."
requires-python = ">=3.13"
dependencies = [
    "ipykernel==7.2.0",
    "jupyterlab==4.5.7",
    "nbconvert==7.17.1",
    "nbformat==5.10.4",
    "pandas==3.0.3",
    "plotly==6.7.0",
    "polars==1.41.2",
    "pyarrow==24.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "nbmake==1.5.5",
    "nbstripout==0.9.1",
    "ruff==0.15.15",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 88
target-version = "py313"
